Initial port 26.2 (WIP)